Fixed horizontal scroll

--- a/components/CaseStudiesCommon/ImagesSection/styles.module.scss
+++ b/components/CaseStudiesCommon/ImagesSection/styles.module.scss
@@ -81,6 +81,7 @@
 
 .bionorica {
   position: relative;
+  overflow: hidden;
 
   & > * {
     z-index: 10;
@@ -107,7 +108,8 @@
 
     &:nth-of-type(2) {
       right: 0;
-      bottom: -20%;
+      bottom: 0;
+      opacity: 0.7;
 
       @include tablet {
         height: 300px;
@@ -116,7 +118,6 @@
 
       @include phone {
         height: 250px;
-        bottom: -10%;
       }
     }
   }
